<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="verReportesVM" type="com.carlosabrahammenndezilhuicatzisapplication.app.modules.verreportes.data.viewmodel.VerReportesVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearVerreportes"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylered_901">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmenu"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMenu"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginTop="@dimen/_37pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtReporteinsufic"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_weight="0.71"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{verReportesVM.verReportesModel.txtReporteinsufic}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/msg_reporte_insufic"/>
                <ImageView android:id="@+id/imageLogoDIROne"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_width="@dimen/_77pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logodir1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logodir1"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnresultadosinsu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_300_cccornerRadius">
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtResultadosInsu"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:text="@{verReportesVM.verReportesModel.txtResultadosInsu}"
                style="@style/txtBaloo2regular20" tools:text="@string/msg_resultados_insu7"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnpacientenombr"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_159pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_300_cccornerRadius">
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtPacienteNombr"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="match_parent"
                android:text="@{verReportesVM.verReportesModel.txtPacienteNombr}"
                style="@style/txtBaloo2regular20" tools:text="@string/msg_paciente_nombr"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txt20decontraer"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:text="@{verReportesVM.verReportesModel.txt20decontraer}"
                style="@style/txt" tools:text="@string/msg_20_de_contraer"/>
            <TextView android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:text="@{verReportesVM.verReportesModel.txtDescription}"
                style="@style/txtBaloo2regular20" tools:text="@string/msg_contemplando_lo"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowrectangletwentytwo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <FrameLayout
                    android:id="@+id/frameStackrectangletwentytwo"
                    android:layout_height="@dimen/_35pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_99pxh">
                    <View android:background="@color/pink_900"
                        android:id="@+id/viewRectangleTwentyTwo"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_33pxv"
                        android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_99pxh"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtAceptar"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{verReportesVM.verReportesModel.txtAceptar}"
                        style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_aceptar"/>
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/frameStackrectangletwentyone"
                    android:layout_height="@dimen/_33pxv"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_20pxh" android:layout_width="@dimen/_99pxh">
                    <View android:background="@color/pink_900"
                        android:id="@+id/viewRectangleTwentyOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_33pxv"
                        android:layout_marginBottom="@dimen/_1pxv" android:layout_width="@dimen/_99pxh"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtEnviar"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_22pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{verReportesVM.verReportesModel.txtEnviar}"
                        style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_enviar"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
