<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="actualizarDatosVM" type="com.carlosabrahammenndezilhuicatzisapplication.app.modules.actualizardatos.data.viewmodel.ActualizarDatosVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearActualizardato"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowuser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylered_901">
            <ImageView android:id="@+id/imageUser"
                android:layout_height="@dimen/_32pxh"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginStart="@dimen/_105pxh"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_width="@dimen/_32pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_menu_white_a700"
                tools:ignore="ContentDescription" tools:src="@drawable/img_menu_white_a700"/>
            <TextView android:id="@+id/txtActualizardato"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_weight="0.45" android:layout_width="0dp"
                android:text="@{actualizarDatosVM.actualizarDatosModel.txtActualizardato}"
                style="@style/txtBaloo2regular20_1" tools:text="@string/msg_actualizar_dato"/>
            <ImageView android:id="@+id/imageLogoDIROne"
                android:layout_height="@dimen/_62pxh"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="@dimen/_77pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_logodir1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logodir1"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumngroupfortyone"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_300_cccornerRadius">
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                android:ellipsize="end"
                android:hint="@string/lbl_carlos_abraham"
                android:id="@+id/etGroupFortyOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@={actualizarDatosVM.actualizarDatosModel.etGroupFortyOneValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                android:ellipsize="end"
                android:hint="@string/msg_men_ndez_ilhuic"
                android:id="@+id/etGroupForty" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@={actualizarDatosVM.actualizarDatosModel.etGroupFortyValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_4pxv"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@{actualizarDatosVM.actualizarDatosModel.txtEmail}"
                style="@style/txtSolidOutline" tools:text="@string/msg_cmenendez344_gm"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@{actualizarDatosVM.actualizarDatosModel.txtPassword}"
                style="@style/txtSolidOutline" tools:text="@string/lbl2"/>
            <FrameLayout android:id="@+id/frameStackrectanglefourteen"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_33pxv"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_125pxh">
                <View android:background="@color/pink_900"
                    android:id="@+id/viewRectangleFourteen"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_125pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtActualizar"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{actualizarDatosVM.actualizarDatosModel.txtActualizar}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_actualizar"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
