<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="enviarVM" type="com.carlosabrahammenndezilhuicatzisapplication.app.modules.enviar.data.viewmodel.EnviarVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearEnviar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylered_901">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmenu"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMenu"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginTop="@dimen/_38pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEnviarreportes"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_34pxv"
                    android:layout_weight="0.57"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{enviarVM.enviarModel.txtEnviarreportes}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_enviar_reportes"/>
                <ImageView android:id="@+id/imageLogoDIROne"
                    android:layout_height="@dimen/_62pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_width="@dimen/_77pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logodir1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logodir1"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumndescription"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_300_cccornerRadius">
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent"
                android:text="@{enviarVM.enviarModel.txtDescription}"
                style="@style/txtBaloo2regular20" tools:text="@string/msg_paciente_nombr2"/>
            <FrameLayout android:id="@+id/frameStackrectangletwentyone"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_33pxv"
                android:layout_marginBottom="@dimen/_19pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_32pxv" android:layout_width="@dimen/_99pxh">
                <View android:background="@color/pink_900"
                    android:id="@+id/viewRectangleTwentyOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_33pxv"
                    android:layout_marginBottom="@dimen/_1pxv" android:layout_width="@dimen/_99pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtEnviar"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{enviarVM.enviarModel.txtEnviar}"
                    style="@style/txtBaloo2regular20_1" tools:text="@string/lbl_enviar"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
